@@ -16,7 +16,6 @@ package org.shanoir.ng.importer.dcm2nii;
 
 import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FilenameFilter;
 import java.io.IOException;
@@ -28,6 +27,7 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map.Entry;
 import java.util.Set;
 
 import org.apache.commons.io.FileUtils;
@@ -70,6 +70,12 @@ import org.springframework.stereotype.Service;
 @Service
 public class DatasetsCreatorAndNIfTIConverterService {
 
+	private static final String BVAL = ".bval";
+
+	private static final String BVEC = ".bvec";
+
+	private static final String DATASET_STR = "dataset";
+
 	private static final Logger LOG = LoggerFactory.getLogger(DatasetsCreatorAndNIfTIConverterService.class);
 
 	private static final String DOUBLE_EQUAL = "==";
@@ -77,8 +83,6 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	private static final String SEMI_COLON = ";";
 	
 	private static final String SERIES = "SERIES";
-	
-	private static final String DATASET = "dataset";
 	
 	@Autowired
 	private NIfTIConverterRepository niftiConverterRepository;
@@ -111,7 +115,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	private String conversionLogs;
 	
 	/** Output files mapped by series UID. */
-	private HashMap<String, List<String>> outputFiles = new HashMap<String, List<String>>();
+	private HashMap<String, List<String>> outputFiles = new HashMap<>();
 	
 	@PreAuthorize("hasAnyRole('ADMIN', 'EXPERT', 'USER')")
 	public NIfTIConverter findById(Long id) {
@@ -134,11 +138,10 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		conversionLogs = "";
 		List<Study> studies = patient.getStudies();
 		for (Iterator<Study> studiesIt = studies.iterator(); studiesIt.hasNext();) {
-			Study study = (Study) studiesIt.next();
+			Study study = studiesIt.next();
 			List<Serie> series = study.getSeries();
-			int numberOfSeries = series.size();
 			for (Iterator<Serie> seriesIt = series.iterator(); seriesIt.hasNext();) {
-				Serie serie = (Serie) seriesIt.next();
+				Serie serie = seriesIt.next();
 				if (serie.getSelected() != null && serie.getSelected()) {
 					File serieIDFolderFile = createSerieIDFolderAndMoveFiles(workFolder, seriesFolderFile, serie);
 					boolean serieIdentifiedForNotSeparating;
@@ -148,7 +151,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 						// otherwise just do not separate the series and keep all images for one nii conversion
 						serie.setDatasets(new ArrayList<Dataset>());
 						constructDicom(serieIDFolderFile, serie, serieIdentifiedForNotSeparating);
-						constructNifti(serieIDFolderFile, serie, numberOfSeries, converterId);
+						constructNifti(serieIDFolderFile, serie, converterId);
 					} catch (NoSuchFieldException | SecurityException e) {
 						LOG.error(e.getMessage());
 					}
@@ -157,16 +160,16 @@ public class DatasetsCreatorAndNIfTIConverterService {
 					serie.getNonImages().clear();
 				}
 			}
-		}	
+		}
 	}
 	
     /**
 	 *
 	 * Create the nifti dataset expression
-	 *  
-	 **/	
+	 * 
+	 **/
 	private ExpressionFormat generateNiftiDatasetExpression(Dataset dataset,Serie serie) {
-        LOG.debug("Create the nifti dataset expressions for dataset : " + dataset.getName() + " in serie " + serie.getSequenceName());
+        LOG.debug("Create the nifti dataset expressions for dataset : {} in serie {}", dataset.getName(), serie.getSequenceName());
         final ExpressionFormat datasetExpressionNifti = new ExpressionFormat();
         datasetExpressionNifti.setType("nii");
         return datasetExpressionNifti;
@@ -175,12 +178,12 @@ public class DatasetsCreatorAndNIfTIConverterService {
     /**
 	 *
 	 * Create the nifti dataset expressions files
-	 *  
+	 * 
 	 **/
 	private void generateNiftiDatasetFiles(ExpressionFormat datasetExpressionFormat, Dataset dataset,List<File> niftiFileList) {
         if (niftiFileList != null  && !niftiFileList.isEmpty()) {
 	        for (final File niftiFile : niftiFileList) {
-	            LOG.debug("create DatasetFile : processing the file " + niftiFile.getName());
+	            LOG.debug("create DatasetFile : processing the file {}", niftiFile.getName());
 	            final DatasetFile niftiDatasetFile = new DatasetFile();
 	            niftiDatasetFile.setPath(niftiFile.toURI().toString().replaceAll(" ", "%20"));
 	            datasetExpressionFormat.getDatasetFiles().add(niftiDatasetFile);
@@ -219,7 +222,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
                 boolean bvecOrBvalFound = false;
                 for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
                     final File file = new File(new URI(datasetFile.getPath()));
-                    if (file.getName().endsWith(".bvec") || file.getName().endsWith(".bval")) {
+                    if (file.getName().endsWith(BVEC) || file.getName().endsWith(BVAL)) {
                         bvecOrBvalFound = true;
                         break;
                     }
@@ -232,27 +235,27 @@ public class DatasetsCreatorAndNIfTIConverterService {
                     String[] bValues = null;
                     for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
                         final File file = new File(new URI(datasetFile.getPath()));
-                        if (file.getName().endsWith(".bvec")) {
-                            BufferedReader reader = new BufferedReader(new FileReader(file));
-                            String line = null;
-                            List<String> items = new ArrayList<String>();
-                            while ((line = reader.readLine()) != null) {
-                                items.add(line);
+                        if (file.getName().endsWith(BVEC)) {
+                            try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
+	                            String line = null;
+	                            List<String> items = new ArrayList<>();
+	                            while ((line = reader.readLine()) != null) {
+	                                items.add(line);
+	                            }
+	                            xValues = items.get(0).split("\\s");
+	                            yValues = items.get(1).split("\\s");
+	                            zValues = items.get(2).split("\\s");
                             }
-                            xValues = items.get(0).split("\\s");
-                            yValues = items.get(1).split("\\s");
-                            zValues = items.get(2).split("\\s");
-                            reader.close();
                         }
-                        if (file.getName().endsWith(".bval")) {
-                            BufferedReader reader = new BufferedReader(new FileReader(file));
-                            String line = null;
-                            List<String> items = new ArrayList<String>();
-                            while ((line = reader.readLine()) != null) {
-                                items.add(line);
+                        if (file.getName().endsWith(BVAL)) {
+                            try(BufferedReader reader = new BufferedReader(new FileReader(file))) {
+	                            String line = null;
+	                            List<String> items = new ArrayList<>();
+	                            while ((line = reader.readLine()) != null) {
+	                                items.add(line);
+	                            }
+	                            bValues = items.get(0).split("\\s");
                             }
-                            bValues = items.get(0).split("\\s");
-                            reader.close();
                         }
                     }
 
@@ -266,8 +269,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
                                 diffusionGradient.setDiffusionGradientOrientationY(Double.valueOf(yValues[i]));
                                 diffusionGradient.setDiffusionGradientOrientationZ(Double.valueOf(zValues[i]));
                                 dataset.getDiffusionGradients().add(i, diffusionGradient);
-                                LOG.debug("extractDiffusionGradients : adding diffusion gradient " + diffusionGradient
-                                        + " dataset " + dataset.getName());
+                                LOG.debug("extractDiffusionGradients : adding diffusion gradient {} dataset {}", diffusionGradient,  dataset.getName());
                             }
                         } else {
                         	LOG.error("extractDiffusionGradients : The matrices doesn't have the same size!!");
@@ -276,12 +278,8 @@ public class DatasetsCreatorAndNIfTIConverterService {
                     	LOG.error("extractDiffusionGradients : error occured when getting the b-vector and b-values");
                     }
                 }
-            } catch (final URISyntaxException exc) {
-            	LOG.error("extractDiffusionGradients : ", exc);
-            } catch (final FileNotFoundException exc) {
-            	LOG.error("extractDiffusionGradients : ", exc);
-            } catch (final IOException exc) {
-            	LOG.error("extractDiffusionGradients : ", exc);
+            } catch (final URISyntaxException | IOException exc) {
+            	LOG.error("extractDiffusionGradients : {}", exc);
             }
         }
         LOG.debug("extractDiffusionGradients : End");
@@ -330,8 +328,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			createBvecAndBval(outputFolder);
 		// Dicom2Nifti
 		} else if (converter != null && converter.isDicom2Nifti()) {
-			is4D = true;
-			conversionLogs += shanoirExec.dicom2niftiExec(inputFolder, converterPath, outputFolder, is4D);
+			conversionLogs += shanoirExec.dicom2niftiExec(inputFolder, converterPath, outputFolder);
 		// dcm2nii
 		} else {
 			is4D = true;
@@ -346,25 +343,26 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @param path
 	 */
 	private List<File> createBvecAndBval(final String path) {
-		LOG.debug("createBvecAndBval : Begin, params : path=" + path);
-		List<File> bvecAndBval = new ArrayList<File>();
+		LOG.debug("createBvecAndBval : Begin, params : path={}", path);
+		List<File> bvecAndBval = new ArrayList<>();
 		final FilenameFilter filter = new FilenameFilter() {
 			@Override
 			public boolean accept(final File dir, final String name) {
-				final boolean accept = FilenameUtils.isExtension(name, new String[] { "prop", "PROP" });
-				return accept;
+				return FilenameUtils.isExtension(name, new String[] { "prop", "PROP" });
 			}
 		};
 		final String[] propFiles = new File(path).list(filter);
 		if (propFiles != null && propFiles.length != 0) {
 			for (final String propFile : propFiles) {
-				LOG.debug("createBvecAndBval : '.prop' file found : " + propFile);
+				LOG.debug("createBvecAndBval : '.prop' file found : {}", propFile);
 				final List<File> thisList = DiffusionUtil.propToBvecBval(new File(path, propFile), new File(path));
-				LOG.debug("createBvecAndBval : bvec and bvals created : " + thisList);
+				LOG.debug("createBvecAndBval : bvec and bvals created : {}", thisList);
 				bvecAndBval.addAll(thisList);
 			}
 		}
-		if(bvecAndBval.isEmpty()) conversionLogs += "There was an error creating bvec and bval. DiffusionGradientOrientation and/or B0 values may be missing in DICOM file.";
+		if(bvecAndBval.isEmpty()) {
+			conversionLogs += "There was an error creating bvec and bval. DiffusionGradientOrientation and/or B0 values may be missing in DICOM file.";
+		}
 		LOG.debug("createBvecAndBval : end");
 		return bvecAndBval;
 	}
@@ -383,7 +381,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
                 boolean toBeRenamed = false;
                 for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
                     final File file = new File(new URI(datasetFile.getPath()));
-                    if (".bvec".equalsIgnoreCase(file.getName()) || ".bval".equalsIgnoreCase(file.getName())) {
+                    if (BVEC.equalsIgnoreCase(file.getName()) || BVAL.equalsIgnoreCase(file.getName())) {
                         toBeRenamed = true;
                         break;
                     }
@@ -404,18 +402,18 @@ public class DatasetsCreatorAndNIfTIConverterService {
                     if (name != null) {
                         for (final DatasetFile datasetFile : datasetExpressionNifti.getDatasetFiles()) {
                             final File file = new File(new URI(datasetFile.getPath()));
-                            if (".bvec".equalsIgnoreCase(file.getName())) {
-                                final String newName = name + ".bvec";
-                                final String newPath = datasetFile.getPath().replaceAll(".bvec", newName);
+                            if (BVEC.equalsIgnoreCase(file.getName())) {
+                                final String newName = name + BVEC;
+                                final String newPath = datasetFile.getPath().replaceAll(BVEC, newName);
                                 file.renameTo(new File(new URI(newPath)));
                                 datasetFile.setPath(newPath);
-                                LOG.debug("renameBvecBval : .bvec renamed to " + newName);
-                            } else if (".bval".equalsIgnoreCase(file.getName())) {
-                                final String newName = name + ".bval";
-                                final String newPath = datasetFile.getPath().replaceAll(".bval", newName);
+                                LOG.debug("renameBvecBval : .bvec renamed to {}", newName);
+                            } else if (BVAL.equalsIgnoreCase(file.getName())) {
+                                final String newName = name + BVAL;
+                                final String newPath = datasetFile.getPath().replaceAll(BVAL, newName);
                                 file.renameTo(new File(new URI(newPath)));
                                 datasetFile.setPath(newPath);
-                                LOG.debug("renameBvecBval : .bval renamed to " + newName);
+                                LOG.debug("renameBvecBval : .bval renamed to {}", newName);
                             }
                         }
                     }
@@ -433,7 +431,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * Remove unused files that are created during the conversion process.
 	 */
 	private void removeUnusedFiles() {
-		final List<File> toBeRemovedList = new ArrayList<File>();
+		final List<File> toBeRemovedList = new ArrayList<>();
 		for (final List<String> listPath : outputFiles.values()) {
 			for (final String path : listPath) {
 				File file = new File(path);
@@ -447,7 +445,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			outputFiles.remove(toBeRemovedFile);
 			boolean success = toBeRemovedFile.delete();
 			if (!success) {
-				LOG.error("removeUnusedFiles : error while deleting " + toBeRemovedFile);
+				LOG.error("removeUnusedFiles : error while deleting {}", toBeRemovedFile);
 			}
 		}
 	}
@@ -455,15 +453,15 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	/**
 	 * This method receives a serie object and a String from the properties
 	 * and checks if the tag exists with a specific value.
-	 * @throws SecurityException 
-	 * @throws NoSuchFieldException 
+	 * @throws SecurityException
+	 * @throws NoSuchFieldException
 	 */
-	private boolean checkSerieForPropertiesString(final Serie serie, final String propertiesString) throws NoSuchFieldException, SecurityException {
+	private boolean checkSerieForPropertiesString(final Serie serie, final String propertiesString) throws NoSuchFieldException {
 		final String[] itemArray = propertiesString.split(SEMI_COLON);
 		for (final String item : itemArray) {
 			final String tag = item.split(DOUBLE_EQUAL)[0];
 			final String value = item.split(DOUBLE_EQUAL)[1];
-			LOG.debug("checkDicomFromProperties : tag=" + tag + ", value=" + value);
+			LOG.debug("checkDicomFromProperties : tag={}, value={}", tag, value);
 			try {
 				Class<? extends Serie> aClass = serie.getClass();
 				Field field = aClass.getDeclaredField(tag);
@@ -499,14 +497,14 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @param serie
 	 * @param seriesCounter
 	 * @param numberOfSeries
-	 * @throws SecurityException 
-	 * @throws NoSuchFieldException 
+	 * @throws SecurityException
+	 * @throws NoSuchFieldException
 	 */
-	private NIfTIConverter datasetToNiftiConversionLauncher(Dataset dataset, File directory, Serie serie, Long converterId, boolean isConvertAs4D, boolean isConvertWithClidcm) throws NoSuchFieldException, SecurityException {
+	private NIfTIConverter datasetToNiftiConversionLauncher(Dataset dataset, File directory, boolean isConvertAs4D) {
 
 				// search for the existing files in the destination folder
 				
-				LOG.info("convertToNifti : create nifti files for the dataset : " + dataset.getName());
+				LOG.info("convertToNifti : create nifti files for the dataset : {}", dataset.getName());
 				if (conversionLogs != null && !"".equals(conversionLogs)) {
 					conversionLogs += "\n";
 				} else {
@@ -515,14 +513,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 
 				// TODO ATO : Fix this once nifti conversion process is defined.
 				
-				NIfTIConverter converter;
-//				if(isConvertWithClidcm) {
-					 converter = findById(5L);					
-//				} else {
-//					converter = findById(converterId);
-//				}
+				NIfTIConverter converter = findById(5L);
 				convertToNiftiExec(converter, directory.getPath(), directory.getPath(), isConvertAs4D);
-				LOG.info("conversionLogs : " + conversionLogs);
+				LOG.info("conversionLogs : {}", conversionLogs);
 				return converter;
 
 	}
@@ -543,17 +536,17 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			if (!containsPropFile(niiFiles)) {
 				for (File niiFile : niiFiles) {
 					outputFiles.get(serieIDFolderFile.getName()).add(niiFile.getAbsolutePath());
-					LOG.info("Path niiFile : " + niiFile.getAbsolutePath());
+					LOG.info("Path niiFile : {}", niiFile.getAbsolutePath());
 				}
 			}
 		} else {
-			List<String> niiPathList = new ArrayList<String>();
+			List<String> niiPathList = new ArrayList<>();
 			if (!containsPropFile(diff(existingFiles, directory.getPath()))) {
 				List<File>  niiFileList = diff(existingFiles, directory.getPath());
-				niftiFileResult = niiFileList; 
+				niftiFileResult = niiFileList;
 				for (File niiFile : niiFileList) {
 					niiPathList.add(niiFile.getAbsolutePath());
-					LOG.info("Path niiFile : " + niiFile.getAbsolutePath());
+					LOG.info("Path niiFile : {}", niiFile.getAbsolutePath());
 				}
 				outputFiles.put(serieIDFolderFile.getName(), niiPathList);
 			}
@@ -588,7 +581,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 						niiFile.delete();
 					}
 				} catch (Exception e) {
-					LOG.error("Error while deleting dicom2nifti generated folder " + e.getMessage());
+					LOG.error("Error while deleting dicom2nifti generated folder {}", e.getMessage());
 				}
 			}
 			// nii files are the diff
@@ -600,7 +593,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	
 	/**
 	 * This method generates the nifti files of serie  in proper datasets for an entire serie.
-	 * It also constructs the associated Nifti ExpressionFormat and DatasetFiles within the Dataset object. 
+	 * It also constructs the associated Nifti ExpressionFormat and DatasetFiles within the Dataset object.
 	 * Finally it also constructs the Bvec and BVal values needed for Diffusion and store them in a a list of Diffusion Gradient which is hold by the dataset itself.
 	 *
 	 * @param serieIDFolderFile
@@ -609,9 +602,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @param convertedId
 	 * 
 	 */
-	private void constructNifti(File serieIDFolderFile, final Serie serie, int numberOfSeries, Long converterId) {
+	private void constructNifti(File serieIDFolderFile, final Serie serie, Long converterId) {
 
-	LOG.debug("convertToNifti : create nifti files for the serie : " + serieIDFolderFile.getAbsolutePath());
+	LOG.debug("convertToNifti : create nifti files for the serie : {}", serieIDFolderFile.getAbsolutePath());
 		
 		if (serie != null) {
 			boolean isConvertAs4D=false;
@@ -626,14 +619,14 @@ public class DatasetsCreatorAndNIfTIConverterService {
 				// Need to construct nifti files for each dataset in current serie
 				int index = 0;
 				for (Dataset dataset : serie.getDatasets()) {
-					File directory = new File(serieIDFolderFile + File.separator + "dataset" + index);
+					File directory = new File(serieIDFolderFile + File.separator + DATASET_STR + index);
 					if (directory.isDirectory()) {
-						LOG.info("convertToNifti : create nifti files for the dataset " + dataset.getName() + " in directory : " + directory.getName());
+						LOG.info("convertToNifti : create nifti files for the dataset {} in directory : {}", dataset.getName(), directory.getName());
 						final List<File> existingFiles = Arrays.asList(directory.listFiles());
 						NIfTIConverter converter = null;
 						try {
-							converter = datasetToNiftiConversionLauncher(dataset, directory, serie, converterId, isConvertAs4D, isConvertWithClidcm);
-						} catch (NoSuchFieldException | SecurityException e) {
+							converter = datasetToNiftiConversionLauncher(dataset, directory, isConvertAs4D);
+						} catch (SecurityException e) {
 							LOG.error(e.getMessage());
 						}
 						List<File> niftiGeneratedFiles = niftiFileSorting(existingFiles, directory, serieIDFolderFile);
@@ -646,12 +639,12 @@ public class DatasetsCreatorAndNIfTIConverterService {
 				// Need to construct nifti files for only one dataset in current serie
 				Dataset dataset = serie.getDatasets().get(0);
 				if (serieIDFolderFile.isDirectory()) {
-					LOG.info("convertToNifti : create nifti files for the dataset " + dataset.getName() + " in directory : " + serieIDFolderFile.getName());
+					LOG.info("convertToNifti : create nifti files for the dataset {} in directory : {}", dataset.getName(), serieIDFolderFile.getName());
 					final List<File> existingFiles = Arrays.asList(serieIDFolderFile.listFiles());
 					NIfTIConverter converter = null;
 					try {
-						converter = datasetToNiftiConversionLauncher(dataset, serieIDFolderFile, serie, converterId, isConvertAs4D, isConvertWithClidcm);
-					} catch (NoSuchFieldException | SecurityException e) {
+						converter = datasetToNiftiConversionLauncher(dataset, serieIDFolderFile, isConvertAs4D);
+					} catch (SecurityException e) {
 						LOG.error(e.getMessage());
 					}
 					List<File> niftiGeneratedFiles = niftiFileSorting(existingFiles, serieIDFolderFile, serieIDFolderFile);
@@ -663,7 +656,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	
 	/**
 	 *  Build dataset Expresion and datasetFiles
-	 *  	
+	 * 
 	 * @param converter
 	 * @param dataset
 	 * @param serie
@@ -680,7 +673,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	
 	/**
 	 * This method extract the dicom files in proper dataset(s) (in a serie).
-	 * It also constructs the associated ExpressionFormat and DatasetFiles within the Dataset object. 
+	 * It also constructs the associated ExpressionFormat and DatasetFiles within the Dataset object.
 	 * 
 	 * @param serieIDFolderFile
 	 * @param serie
@@ -688,7 +681,7 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 */
 	private void constructDicom(final File serieIDFolderFile, final Serie serie, final boolean serieIdentifiedForNotSeparating) {
 		if (!serieIdentifiedForNotSeparating) {
-			final HashMap<SerieToDatasetsSeparator, Dataset> datasetMap = new HashMap<SerieToDatasetsSeparator, Dataset>();
+			final HashMap<SerieToDatasetsSeparator, Dataset> datasetMap = new HashMap<>();
 			for (Image image : serie.getImages()) {
 				final int acquisitionNumber = image.getAcquisitionNumber();
 				Set<EchoTime> echoTimes = image.getEchoTimes();
@@ -707,9 +700,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 				if (found) {
 					DatasetFile datasetFile = createDatasetFile(image);
 					datasetMap.get(seriesToDatasetsSeparator).getExpressionFormats().get(0).getDatasetFiles().add(datasetFile);
-					datasetMap.get(seriesToDatasetsSeparator).getFlipAngles().add(new Double(image.getFlipAngle()));
-					datasetMap.get(seriesToDatasetsSeparator).getRepetitionTimes().add(new Double(image.getRepetitionTime()));
-					datasetMap.get(seriesToDatasetsSeparator).getInversionTimes().add(new Double(image.getInversionTime()));
+					datasetMap.get(seriesToDatasetsSeparator).getFlipAngles().add(Double.valueOf(image.getFlipAngle()));
+					datasetMap.get(seriesToDatasetsSeparator).getRepetitionTimes().add(image.getRepetitionTime());
+					datasetMap.get(seriesToDatasetsSeparator).getInversionTimes().add(image.getInversionTime());
 					datasetMap.get(seriesToDatasetsSeparator).setEchoTimes(image.getEchoTimes());
 				// new dataset has to be created, new expression format and add image/datasetfile
 				} else {
@@ -718,9 +711,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 					expressionFormat.setType("dcm");
 					dataset.getExpressionFormats().add(expressionFormat);
 					DatasetFile datasetFile = createDatasetFile(image);
-					dataset.getFlipAngles().add(new Double(image.getFlipAngle()));
-					dataset.getRepetitionTimes().add(new Double(image.getRepetitionTime()));
-					dataset.getInversionTimes().add(new Double(image.getInversionTime()));
+					dataset.getFlipAngles().add(Double.valueOf(image.getFlipAngle()));
+					dataset.getRepetitionTimes().add(image.getRepetitionTime());
+					dataset.getInversionTimes().add(image.getInversionTime());
 					dataset.setEchoTimes(image.getEchoTimes());
 					expressionFormat.getDatasetFiles().add(datasetFile);
 					datasetMap.put(seriesToDatasetsSeparator, dataset);
@@ -731,25 +724,25 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			boolean success = true;
 			// create a separate folder for each group of images
 			int index = 0;
-			for (final SerieToDatasetsSeparator datasets : datasetMap.keySet()) {
+			for (final Entry<SerieToDatasetsSeparator, Dataset> datasets : datasetMap.entrySet()) {
 				// create a folder
-				final File folder = new File(serieIDFolderFile.getAbsolutePath() + File.separator + DATASET + index);
+				final File folder = new File(serieIDFolderFile.getAbsolutePath() + File.separator + DATASET_STR + index);
 				success = folder.mkdirs();
 				if (!success) {
-					LOG.error("deleteFolder : the creation of " + folder + " failed");
+					LOG.error("deleteFolder : the creation of {} failed", folder);
 				}
 				// move the files into the folder
-				for (final DatasetFile datasetFile : datasetMap.get(datasets).getExpressionFormats().get(0).getDatasetFiles()) {
+				for (final DatasetFile datasetFile : datasets.getValue().getExpressionFormats().get(0).getDatasetFiles()) {
 					String path = datasetFile.getPath();
 					final File oldFile = new File(path);
 					if (oldFile.exists()) {
 						final File newFile = new File(folder, oldFile.getName());
 						success = oldFile.renameTo(newFile);
 						datasetFile.setPath(newFile.getAbsolutePath());
-						datasetMap.get(datasets).setName(serie.getSeriesDescription() + index);
+						datasets.getValue().setName(serie.getSeriesDescription() + index);
 						if (!success) {
-							LOG.error("deleteFolder : moving of " + oldFile + " failed");
-						}					
+							LOG.error("deleteFolder : moving of {} failed", oldFile);
+						}
 					}
 				}
 				index++;
@@ -761,9 +754,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 			Dataset dataset = new Dataset();
 			dataset.setName(serie.getSeriesDescription());
 			for (Image image : serie.getImages()) {
-				dataset.getFlipAngles().add(new Double(image.getFlipAngle()));
-				dataset.getRepetitionTimes().add(new Double(image.getRepetitionTime()));
-				dataset.getInversionTimes().add(new Double(image.getInversionTime()));
+				dataset.getFlipAngles().add(Double.valueOf(image.getFlipAngle()));
+				dataset.getRepetitionTimes().add(image.getRepetitionTime());
+				dataset.getInversionTimes().add(image.getInversionTime());
 				dataset.setEchoTimes(image.getEchoTimes());
 				ExpressionFormat expressionFormat = new ExpressionFormat();
 				expressionFormat.setType("dcm");
@@ -784,7 +777,6 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		DatasetFile datasetFile = new DatasetFile();
 		datasetFile.setPath(image.getPath());
 		datasetFile.setAcquisitionNumber(image.getAcquisitionNumber());
-//		datasetFile.setEchoTime(image.getEchoTimes());
 		datasetFile.setImageOrientationPatient(image.getImageOrientationPatient());
 		return datasetFile;
 	}
@@ -807,8 +799,6 @@ public class DatasetsCreatorAndNIfTIConverterService {
 		}
 		List<Image> images = serie.getImages();
 		moveFiles(workFolder, serieIDFolderFile, images);
-//		List<Object> nonImages = serie.getNonImages();
-//		moveFiles(serieIDFolderFile, nonImages);
 		return serieIDFolderFile;
 	}
 
@@ -821,14 +811,14 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 */
 	private void moveFiles(File workFolder, File serieIDFolder, List<Image> images) throws ShanoirException {
 		for (Iterator<Image> iterator = images.iterator(); iterator.hasNext();) {
-			Image image = (Image) iterator.next();
+			Image image = iterator.next();
 			// the path has been set in processDicomFile in DicomFileAnalyzer before
 			String filePath = image.getPath();
 			File oldFile = new File(workFolder.getAbsolutePath() + File.separator + filePath);
 			if (oldFile.exists()) {
 				File newFile = new File(serieIDFolder.getAbsolutePath() + File.separator + oldFile.getName());
 				oldFile.renameTo(newFile);
-				LOG.debug("Moving file: " + oldFile.getAbsolutePath() + " to " + newFile.getAbsolutePath());
+				LOG.debug("Moving file: {} to {}", oldFile.getAbsolutePath(), newFile.getAbsolutePath());
 				image.setPath(newFile.getAbsolutePath());
 			} else {
 				throw new ShanoirException("Error while creating serie id folder: file to copy does not exist.");
@@ -864,9 +854,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 * @return the list< file>
 	 */
 	private List<File> diff(final List<File> existingFiles, final String destinationFolder) {
-		final List<File> resultList = new ArrayList<File>();
-		final List<File> outputFiles = Arrays.asList(new File(destinationFolder).listFiles());
-		for (final File file : outputFiles) {
+		final List<File> resultList = new ArrayList<>();
+		final List<File> outputFilesToDiff = Arrays.asList(new File(destinationFolder).listFiles());
+		for (final File file : outputFilesToDiff) {
 			if (!existingFiles.contains(file)) {
 				resultList.add(file);
 			}
@@ -882,7 +872,9 @@ public class DatasetsCreatorAndNIfTIConverterService {
 	 */
 	private boolean containsPropFile(List<File> niftiFiles){
 		for(File current : niftiFiles){
-			if(current.getPath().contains(".prop")) return true;
+			if(current.getPath().contains(".prop")) {
+				return true;
+			}
 		}
 		return false;
 	}
